...
      "isCommentAutoGenerated" : true
    },
    "Choose your apps in the App Select tab first. Then you can create groups for more granular control." : {
      "comment" : "A description for the \"No App Selection\" ContentUnavailableView in the GroupsView.",
      "isCommentAutoGenerated" : true
    },
    "Close" : {
      "comment" : "A button to close the settings view.",
      "isCommentAutoGenerated" : true
    },
    "Completely optional, thank you for even considering it. 💛" : {
      "comment" : "A thank-you message displayed below the donation options, encouraging users to consider donating.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Timed Unblock" : {
      "comment" : "The title of the sheet that allows users to unblock their devices for a set period of time.",
      "isCommentAutoGenerated" : true
    },
    "Timed Unblock Active" : {
      "comment" : "A label displayed in the \"Timed Unblock Active\" section of the view.",
      "isCommentAutoGenerated" : true
    },
    "Timing" : {
      "comment" : "A label for the \"Duration Type\" section in the schedule form sheet.",
      "isCommentAutoGenerated" : true
...
